--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Home Page</title>
-    <link rel="icon" type="image/x-icon" href="/images/school.png"/>
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 
 <header th:fragment="header" class="flex-shrink-0 border-bottom border-black shadow">
@@ -29,7 +16,7 @@
                         width="35"
                         height="35"
                         class="d-inline-block align-text-middle me-1"
-                /><span th:text="${username}" /></a
+                /><span th:text="${username}"/></a
             >
             <button
                     class="navbar-toggler"
@@ -47,12 +34,12 @@
                     <a
                             class="nav-link text-center fs-5 link-light active"
                             aria-current="page"
-                            href="#"
+                            href="/test/join"
                     >Join Test</a
                     >
                     <a
                             class="nav-link text-center fs-5 link-light"
-                            href="#"
+                            href="/test/create"
                     >Create Test</a
                     >
                     <a class="nav-link text-center fs-5 link-light" href="#"
@@ -75,15 +62,6 @@
 </header>
 
 
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
