--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,84 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TestingEz</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/images/school.png"
-    />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/typography.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <style>
-      p {
-        text-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      }
-    </style>
-  </head>
-  <body class="font">
-    <div class="d-flex flex-column vh-100 bg-secondary">
-      <header class="flex-shrink-0 shadow rounded border-bottom border-black">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="~{fragments/heads :: head}"></div>
+<body class="font">
+<div class="d-flex flex-column vh-100 bg-secondary">
+    <header class="flex-shrink-0 shadow rounded border-bottom border-black">
         <nav class="container navbar bg-secondary">
-          <div class="container-fluid justify-content-center">
-            <a class="navbar-brand text-white fs-3" href="#">
-              <img
-                src="/images/school.png"
-                alt="Logo"
-                width="40"
-                height="40"
-                class="d-inline-block align-text-middle"
-              />
-              TestingEz</a
-            >
-          </div>
+            <div class="container-fluid justify-content-center">
+                <a class="navbar-brand text-white fs-3" href="#">
+                    <img
+                            src="/images/school.png"
+                            alt="Logo"
+                            width="40"
+                            height="40"
+                            class="d-inline-block align-text-middle"
+                    />
+                    TestingEz</a
+                >
+            </div>
         </nav>
-      </header>
+    </header>
 
-      <main
-        class="d-flex justify-content-center align-items-center flex-grow-1 bg-light text-center"
-      >
+    <main
+            class="d-flex justify-content-center align-items-center flex-grow-1 bg-light text-center"
+    >
         <div class="container">
-          <p class="m-0 fs-1">Welcome to TestingEz</p>
-          <p class="fs-5">
-            Start testing whomever you want <br />on whatever you want!
-          </p>
-          <a
-            href="/account/login"
-            class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2 shadow rounded"
-            role="button"
-          >
-            Sign In
-          </a>
-          <a
-            href="/account/create"
-            class="btn btn-secondary btn-lg px-5 border border-black border-2 shadow rounded"
-            role="button"
-          >
-            Sign Up
-          </a>
+            <p class="m-0 fs-1">Welcome to TestingEz</p>
+            <p class="fs-5">
+                Start testing whomever you want <br/>on whatever you want!
+            </p>
+            <a
+                    href="/account/login"
+                    class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2 shadow rounded"
+                    role="button"
+            >
+                Sign In
+            </a>
+            <a
+                    href="/account/create"
+                    class="btn btn-secondary btn-lg px-5 border border-black border-2 shadow rounded"
+                    role="button"
+            >
+                Sign Up
+            </a>
         </div>
-      </main>
+    </main>
 
-      <div th:replace="fragments/footers :: footer"></div>
-    </div>
+    <div th:replace="~{fragments/footers :: footer}"></div>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
+</body>
 </html>
