--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,67 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Sign In</title>
-    <link
-            rel="icon"
-            type="image/x-icon"
-            href="/images/school.png"
-    />
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
-<body
-        class="bg-secondary vh-100 d-flex justify-content-center align-items-center font"
->
-<div
-        class="container d-flex justify-content-center align-items-center vh-100"
->
-    <div
-            class="bg-light p-5 border border-black border-3 shadow rounded fs-5"
-    >
+<div th:replace="~{fragments/heads :: head}"></div>
+<body class="bg-secondary vh-100 d-flex justify-content-center align-items-center font">
+<div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="bg-light p-5 border border-black border-3 shadow rounded fs-5">
         <h2 class="text-center">Login</h2>
         <form action="#"
               class="d-flex flex-column"
               method="post"
-              th:method="@{account/login}"
-              th:object="${userLoginData}">
-            <div class="form-group">
-                <label for="username">Username:</label>
+              novalidate
+              th:method="@{/account/login}"
+              th:object="${userSignInData}">
+            <div th:if="${invalidCredentials}" class="text-danger fs-6 text-center">invalid credentials</div>
+            <label for="username" class="form-label">Username:</label>
+            <div class="input-group">
+                <span class="input-group-text border-black" id="inputGroupPrepend">@</span>
                 <input
-                        th:field="*{username}"
-                        type="text"
+                        aria-describedby="inputGroupPrepend"
                         class="form-control border border-black fs-6"
                         id="username"
                         placeholder="Enter username"
                         required
+                        th:field="*{username}"
+                        type="text"
                 />
-                <div
-                        th:if="${#fields.hasErrors('username')}"
-                        th:errors="*{username}"
-                        class="text-danger fs-6"></div>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
+            <div
+                    th:if="${#fields.hasErrors('username')}"
+                    th:errors="*{username}"
+                    class="text-danger fs-6"></div>
+            <label for="password" class="form-label">Password:</label>
+            <div class="input-group">
                 <input
-                        th:field="*{password}"
-                        type="password"
-                        class="form-control border border-black mb-3 fs-6"
+                        class="form-control border border-black fs-6"
                         id="password"
+                        name="password"
                         placeholder="Enter password"
                         required
+                        th:field="*{password}"
+                        type="password"
                 />
             </div>
+            <div
+                    th:if="${#fields.hasErrors('password')}"
+                    th:errors="*{password}"
+                    class="text-danger fs-6"></div>
             <button
                     type="submit"
-                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5"
+                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5 mt-3"
             >
                 Sign In
             </button>
@@ -69,15 +55,6 @@
     </div>
 </div>
 
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
