--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Sign Up</title>
-    <link rel="icon" type="image/x-icon" href="/images/school.png"/>
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column min-vh-100 gap-5 bg-secondary p-3">
-    <main
-            class="container d-flex flex-column flex-fill align-item-center justify-content-center flex-grow-1 bg-secondary"
-    >
+    <main class="container d-flex flex-column flex-fill align-item-center justify-content-center flex-grow-1 bg-secondary">
         <div class="row justify-content-center">
-            <div
-                    class="col-sm-12 col-md-10 col-lg-8 bg-light shadow rounded border border-2 border-black p-3"
-            >
+            <div class="col-sm-12 col-md-10 col-lg-8 bg-light shadow rounded border border-2 border-black p-3">
                 <h2 class="text-center">Register</h2>
                 <form
                         action="#"
@@ -54,6 +37,9 @@
                                  th:errors="*{username}"
                                  th:if="${#fields.hasErrors('username')}">
                             </div>
+                            <div th:if="${invalidUsername}" class="text-danger fs-6">This username is
+                                already in use.
+                            </div>
                         </div>
                     </div>
 
@@ -76,6 +62,7 @@
                                  th:errors="*{password}"
                                  th:if="${#fields.hasErrors('password')}">
                             </div>
+                            <div th:if="${invalidPasswords}" class="text-danger fs-6">Passwords do not match.</div>
                         </div>
                     </div>
 
@@ -162,6 +149,9 @@
                                  th:errors="*{email}"
                                  th:if="${#fields.hasErrors('email')}">
                             </div>
+                            <div th:if="${invalidEmail}" class="text-danger fs-6">This email is
+                                already in use.
+                            </div>
                         </div>
                     </div>
 
@@ -185,6 +175,9 @@
                                  th:errors="*{phone}"
                                  th:if="${#fields.hasErrors('phone')}">
                             </div>
+                            <div th:if="${invalidPhone}" class="text-danger fs-6">This phone is
+                                already in use.
+                            </div>
                         </div>
                     </div>
 
@@ -204,15 +197,6 @@
     </main>
 </div>
 
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
