--- a/src/main/resources/templates/test-join.html
+++ b/src/main/resources/templates/test-join.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Home Page</title>
-    <link rel="icon" type="image/x-icon" href="/images/school.png"/>
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
-    <div th:replace="fragments/headers :: header"></div>
+    <div th:replace="~{fragments/headers :: header}"></div>
 
-    <main
-            class="container d-flex justify-content-center align-items-center flex-grow-1"
-    >
+    <main class="container d-flex justify-content-center align-items-center flex-grow-1">
         <div class="row gap-3 flex-fill">
             <div class="col-sm-1 flex-fill align-self-center">
                 <form
@@ -28,9 +13,9 @@
                         class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
                 >
                     <div class="mb-3 flex-fill text-center">
-                        <label for="testCode" class="form-label fs-4 text-white"
-                        >Enter Test Code:</label
-                        >
+                        <label for="testCode" class="form-label fs-4 text-white">
+                            Enter Test Code:
+                        </label>
                         <input
                                 type="text"
                                 class="form-control border border-black fs-6"
@@ -51,41 +36,29 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div
-                                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
-                            >
+                            <div class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column">
                                 <h3 class="text-white text-center">Previous Results:</h3>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">MAT #1</div>
                                     <div class="test-name">24.05.24</div>
                                     <div class="test-result">0/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">BEL #2</div>
                                     <div class="test-name">21.05.24</div>
                                     <div class="test-result">10/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">AE #3</div>
                                     <div class="test-name">20.05.24</div>
                                     <div class="test-result">3/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">AE #4</div>
                                     <div class="test-name">19.05.24</div>
                                     <div class="test-result">6/10</div>
                                 </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
+                                <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">MAT #5</div>
                                     <div class="test-name">18.05.24</div>
                                     <div class="test-result">9/10</div>
@@ -103,18 +76,9 @@
         </div>
     </main>
 
-    <div th:replace="fragments/footers :: footer"></div>
+    <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
