--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column align-items-center justify-content-center vh-100 bg-secondary">
