--- a/src/main/resources/templates/questions-create.html
+++ b/src/main/resources/templates/questions-create.html
@@ -120,12 +120,18 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center gap-1 mt-3">
-                    <button type="submit" class="btn btn-success border border-black border-2 shadow fs-4">Complete
-                    </button>
-                    <button type="button" class="btn btn-danger border border-black border-2 shadow fs-4">Cancel
+                    <button type="submit" class="btn btn-success border border-black border-2 shadow fs-4">
+                        Complete
                     </button>
                 </div>
             </form>
+            <div class="d-flex justify-content-center gap-1 mt-3">
+                <form th:action="@{/test/delete}" method="post">
+                    <button type="submit" class="btn btn-danger border border-black border-2 shadow fs-4">
+                        Cancel
+                    </button>
+                </form>
+            </div>
         </div>
     </main>
 
