user-profile.html created and made possible to access, not ready

--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -8,7 +8,7 @@
         <div class="container-fluid gap-1">
             <a
                     class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
-                    href="#"
+                    th:href="@{/user/profile}"
             >
                 <img
                         src="/images/astronaut.png"
