edit profile data is now availab;e

--- a/src/main/resources/templates/test-create.html
+++ b/src/main/resources/templates/test-create.html
@@ -33,7 +33,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{name}"
                              th:if="${#fields.hasErrors('name')}">
                         </div>
@@ -56,7 +56,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{description}"
                              th:if="${#fields.hasErrors('description')}">
                         </div>
@@ -83,7 +83,7 @@
                                     type="button">Generate
                             </button>
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{code}"
                              th:if="${#fields.hasErrors('code')}">
                         </div>
@@ -107,7 +107,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{responseTime}"
                              th:if="${#fields.hasErrors('responseTime')}">
                         </div>
@@ -128,7 +128,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{passingScore}"
                              th:if="${#fields.hasErrors('passingScore')}">
                         </div>
@@ -151,7 +151,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{questionsCount}"
                              th:if="${#fields.hasErrors('questionsCount')}">
                         </div>
@@ -174,7 +174,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-danger fs-6"
+                        <div class="text-warning fs-6"
                              th:errors="*{status}"
                              th:if="${#fields.hasErrors('status')}">
                         </div>
