--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -71,7 +71,7 @@
                         type="text"
                         th:value="'Role: ' + *{role}">
                 <a th:href=" @{/user/profile/edit}"
-                   class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50">
+                   class="btn bg-warning rounded shadow text-center text-black border border-black border-2 w-50 fs-5">
                     Edit profile
                 </a>
             </div>
