implementing spring security (1), trying to get rid of the CurrentUser session score object, the login post request is now handled by spring security, only 3 endpoints are accessible before login

--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -9,7 +9,7 @@
               class="d-flex flex-column"
               method="post"
               novalidate
-              th:method="@{/account/login}"
+              th:action="@{/account/login}"
               th:object="${userSignInData}">
             <div th:if="${invalidCredentials}" class="text-danger fs-6 text-center">invalid credentials</div>
             <label for="username" class="form-label">Username:</label>
