unnecessary username model attributes removed

--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -51,11 +51,11 @@
                     >My Results</a>
                     <a class="nav-link text-center fs-5 link-light" href="#"
                     >My Tests</a>
-                    <a class="nav-link text-center fs-5 link-light"
+                    <a class="nav-link text-center text-success-emphasis fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                     >All Tests</a>
-                    <a class="nav-link text-center fs-5 link-light"
+                    <a class="nav-link text-center text-success-emphasis fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                     >All Users</a>
