--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -96,56 +96,127 @@
     <main class="container d-flex justify-content-center flex-grow-1">
         <div class="row justify-content-around align-items-center flex-fill">
             <div class="col-sm-10 col-md-6">
-                <div class="bg-secondary rounded shadow border border-2 border-black p-2 fs-5 text-white text-center overflow-auto">
-                    <h1>Test of the Day</h1>
+                <h1>Test of the Day</h1>
+                <div class="bg-secondary rounded shadow border border-2 border-black p-2 fs-5 text-white text-center overflow-auto"
+                     style="height: 455px">
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
                             <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black"
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
                                        id="q1">
                             </label>
-                            <span class="d-none">true answer</span>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
                         </div>
                     </div>
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
                             <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black"
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
                                        id="q1">
                             </label>
-                            <span class="d-none">true answer</span>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
                         </div>
                     </div>
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
                             <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black"
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
                                        id="q1">
                             </label>
-                            <button>Reveal</button>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
                         </div>
                     </div>
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
                             <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black"
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
                                        id="q1">
                             </label>
-                            <span class="d-none">true answer</span>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
                         </div>
                     </div>
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
                             <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black"
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
                                        id="q1">
                             </label>
-                            <span class="d-none">true answer</span>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black py-1"
+                                       id="q1">
+                            </label>
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                                check
+                            </button>
                         </div>
                     </div>
                 </div>
